--- a/styles/_contact-section-module.scss
+++ b/styles/_contact-section-module.scss
@@ -2,11 +2,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* 
-    justify-content: center;
-    align-items: center; */
     height: 84vh;
     .contact-content-sub-container {
+        .contact-content-sub-sub-container {
+        }
         height: 75vh;
         display: flex;
         flex-direction: column;
@@ -18,15 +17,11 @@
             background-color: #cdcac7;
             border: 1px solid #cdcac7;
         }
-        .contact-content-sub-item:nth-child(2)
-        {
+        .contact-content-sub-item:nth-child(1) {
             margin-top: 1vh; /* dodělat mezery mezi inputy */
         }
-        .contact-content-sub-item:nth-child(6) {
-            border: 1px rgb(0, 38, 255) solid;
-            
-            input{
-                
+        .contact-content-sub-item:nth-child(5) {
+            input {
                 height: 15vh;
             }
         }
@@ -42,6 +37,49 @@
             font-size: 0.9rem;
             box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
             color: $general-background-color;
+        }
+    }
+}
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+    .contact-content-container {
+        height: 80vh;
+        .contact-content-sub-sub-container {
+            width: 30vw;
+            height: auto;
+            display: grid;
+            /* justify-items: center;
+            align-items: center; */
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(6, 1fr);
+            /* gap: 2vh 1vw; */
+            row-gap: 2vh;
+            column-gap: 1vw;
+            input{
+                width: fit-content;
+                border: 1px solid red;
+            }
+            .contact-content-sub-item:nth-child(1) {
+                grid-area: 1 / 1 / 1 / 1;
+                margin-top: 0;
+                border: 1px solid blue;
+            }
+            .contact-content-sub-item:nth-child(2) {
+                grid-area: 1 / 2 / 1 / 2;
+            }
+            .contact-content-sub-item:nth-child(3) {
+                grid-area: 2 / 1 / 2 / 1;
+            }
+            .contact-content-sub-item:nth-child(4) {
+                grid-area: 2 / 2 / 2 / 2;
+            }
+            .contact-content-sub-item:nth-child(5) {
+                grid-area: 3 / 1 / span 6 / span 2;
+                background-color: rgba(195, 42, 42, 0.575);
+                input {
+                    width: 30vw;
+                    height: 30vh;
+                }
+            }
         }
     }
 }
