--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,7 +313,7 @@ body::-webkit-scrollbar {
     margin: 0;
   }
   .content-container .welcome-banner-container {
-    background-image: url("/wba-pitra-david-2k/individual-work/pitra-2k-web-figma-1/images/index-welcome-beach.png");
+    background-image: url("index-welcome-beach.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -662,9 +662,6 @@ footer .footer-information {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /* 
-    justify-content: center;
-    align-items: center; */
   height: 84vh;
 }
 
@@ -691,16 +688,12 @@ footer .footer-information {
   border: 1px solid #cdcac7;
 }
 
-.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(2) {
+.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(1) {
   margin-top: 1vh;
   /* dodělat mezery mezi inputy */
 }
 
-.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(6) {
-  border: 1px #0026ff solid;
-}
-
-.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(6) input {
+.contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(5) input {
   height: 15vh;
 }
 
@@ -722,5 +715,67 @@ footer .footer-information {
   -webkit-box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #efeee9;
+}
+
+@media only screen and (min-width: 1600px) and (min-height: 720px) {
+  .contact-content-container {
+    height: 80vh;
+  }
+  .contact-content-container .contact-content-sub-sub-container {
+    width: 30vw;
+    height: auto;
+    display: -ms-grid;
+    display: grid;
+    /* justify-items: center;
+            align-items: center; */
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    /* gap: 2vh 1vw; */
+    row-gap: 2vh;
+    -webkit-column-gap: 1vw;
+            column-gap: 1vw;
+  }
+  .contact-content-container .contact-content-sub-sub-container input {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    border: 1px solid red;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: 1 / 1 / 1 / 1;
+    margin-top: 0;
+    border: 1px solid blue;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: 1 / 2 / 1 / 2;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: 2 / 1 / 2 / 1;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: 2 / 2 / 2 / 2;
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 6;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: 3 / 1 / span 6 / span 2;
+    background-color: rgba(195, 42, 42, 0.575);
+  }
+  .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(5) input {
+    width: 30vw;
+    height: 30vh;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
