--- a/styles/_contact-section-module.scss
+++ b/styles/_contact-section-module.scss
@@ -43,10 +43,15 @@
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
     .contact-content-container {
         height: 80vh;
+        .registration-button-contact {
+            margin-top: 2em;
+            margin-bottom: 10vh;
+        }
         .contact-content-sub-sub-container {
-            width: 30vw;
+            width: 35vw;
             height: auto;
             display: grid;
+            align-items: center;
             /* justify-items: center;
             align-items: center; */
             grid-template-columns: repeat(2, 1fr);
@@ -54,8 +59,8 @@
             /* gap: 2vh 1vw; */
             row-gap: 2vh;
             column-gap: 1vw;
-            input{
-                width: fit-content;
+            input {
+                width: max-content;
                 border: 1px solid red;
             }
             .contact-content-sub-item:nth-child(1) {
@@ -65,19 +70,22 @@
             }
             .contact-content-sub-item:nth-child(2) {
                 grid-area: 1 / 2 / 1 / 2;
+                border: 1px solid blue;
             }
             .contact-content-sub-item:nth-child(3) {
                 grid-area: 2 / 1 / 2 / 1;
+                border: 1px solid blue;
             }
             .contact-content-sub-item:nth-child(4) {
                 grid-area: 2 / 2 / 2 / 2;
+                border: 1px solid blue;
             }
             .contact-content-sub-item:nth-child(5) {
                 grid-area: 3 / 1 / span 6 / span 2;
-                background-color: rgba(195, 42, 42, 0.575);
+
                 input {
-                    width: 30vw;
-                    height: 30vh;
+                    width: 35vw;
+                    height: 20vh;
                 }
             }
         }
