--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -104,7 +104,7 @@
                     font-size: 300%;
                 }
                 p {
-                    margin: 0.2em;
+                    margin: 0.2em .8em .2em .8em;
                     font-size: 140%;
                 }
                 button {
