--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -71,12 +71,13 @@
     margin-top: 2.3em;
     margin-bottom: 2.3em;
     button {
-        padding: 1% 1.5em 1% 1.5em;
+        /* padding: 1% 1.5em 1% 1.5em;
         background-color: $button-bg-color;
         border: $button-bg-color 1px solid;
         font-size: 0.9rem;
         box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
-        color: $general-background-color;
+        color: $general-background-color; */
+        @include registration-button-mixin
     }
 }
 
@@ -104,11 +105,16 @@
                     font-size: 300%;
                 }
                 p {
-                    margin: 0.2em .8em .2em .8em;
+                    margin: 0.2em 0.8em 0.2em 0.8em;
                     font-size: 140%;
                 }
                 button {
                     font-size: 130%;
+                    transition-duration:$transition-duration-buttons;
+                }
+                button:hover {
+                    scale: 110%;
+                    transition-duration: $transition-duration-buttons;
                 }
             }
         }
@@ -166,6 +172,14 @@
             margin-bottom: 10vh;
             button {
                 font-size: 130%;
+                transition-duration: $transition-duration-buttons;
+
+                
+            }
+            button:hover {
+                scale: 110%;
+                transition-duration: $transition-duration-buttons;
+                
             }
         }
     }
