--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -26,12 +26,13 @@
             img {
                 min-width: 100%;
                 height: 90%;
+                
             }
         }
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 0 3% 0 3%;
+        margin: 3vh 2vw 3vh 2vw;
 
         .nav-button {
             position: relative;
@@ -40,7 +41,7 @@
                 width: 60px;
                 display: block;
                 /* proužek pod headerem */
-                padding: 8px 10px;
+                padding: 8px 8px;
                 /* transition: all 0.5s;
                 -webkit-transition: all 0.5s; */
             }
