--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -77,7 +77,12 @@
         font-size: 0.9rem;
         box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
         color: $general-background-color; */
-        @include registration-button-mixin
+        @include registration-button-mixin;
+        transition-duration: $transition-duration-buttons;
+    }
+    button:hover {
+        scale: 110%;
+        transition-duration: $transition-duration-buttons;
     }
 }
 
@@ -110,7 +115,7 @@
                 }
                 button {
                     font-size: 130%;
-                    transition-duration:$transition-duration-buttons;
+                    transition-duration: $transition-duration-buttons;
                 }
                 button:hover {
                     scale: 110%;
@@ -173,13 +178,10 @@
             button {
                 font-size: 130%;
                 transition-duration: $transition-duration-buttons;
-
-                
             }
             button:hover {
                 scale: 110%;
                 transition-duration: $transition-duration-buttons;
-                
             }
         }
     }
