--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,7 @@ body::-webkit-scrollbar {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 3% 0 3%;
+  margin: 3vh 2vw 3vh 2vw;
 }
 
 .nav-bar-container .nav-bar-sub-container .nav-icon img {
@@ -80,7 +80,7 @@ body::-webkit-scrollbar {
   width: 60px;
   display: block;
   /* proužek pod headerem */
-  padding: 8px 10px;
+  padding: 8px 8px;
   /* transition: all 0.5s;
                 -webkit-transition: all 0.5s; */
 }
@@ -349,6 +349,14 @@ body::-webkit-scrollbar {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #f8f7ec;
   cursor: pointer;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.registration-button button:hover {
+  scale: 110%;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
@@ -487,7 +495,6 @@ body::-webkit-scrollbar {
 }
 
 footer {
-  height: 8vh;
   background-color: #cbc1b1;
   position: relative;
   /* fixed smaže škvíru pod */
@@ -747,6 +754,7 @@ footer .footer-information {
 .contact-content-container .contact-content-sub-container input {
   background-color: #cdcac7;
   border: 1px solid #cdcac7;
+  margin-top: 3vh;
 }
 
 .contact-content-container .contact-content-sub-container .contact-content-sub-item:nth-child(1) {
@@ -766,6 +774,8 @@ footer .footer-information {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 2.3em;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 .contact-content-container .registration-button-contact button {
@@ -777,6 +787,12 @@ footer .footer-information {
           box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.3);
   color: #efeee9;
   cursor: pointer;
+}
+
+.contact-content-container .registration-button-contact button:hover {
+  scale: 110%;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
 @media only screen and (min-width: 1600px) and (min-height: 720px) {
@@ -820,9 +836,8 @@ footer .footer-information {
             column-gap: 1vw;
   }
   .contact-content-container .contact-content-sub-sub-container input {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
+    width: 100%;
+    margin-top: 0;
   }
   .contact-content-container .contact-content-sub-sub-container .contact-content-sub-item:nth-child(1) {
     -ms-grid-row: 1;
