--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,35 @@
 @import "reset";
+@import "var";
+@import "mixin";
 @import "header";
-@import "button";
+@import "footer";
+@import "homepage";
+@import "about";
+html,
+body {
+    scroll-behavior: smooth;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    /* font-family: 'Quicksand', sans-serif; */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    /* background-image: url("leaf.jpg");*/
+    /*  background: #171717; */
+    /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
+    background-size: 210px 210px; */
+}
+
+main {
+    img {
+        @include monochrome-image-setting;
+    }
+    img:hover {
+        @include hover-image-animation
+    }
+}
